upload using header version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ include_directories(
 
 set(SOURCE_FILES
 #        getYUVFrame.cpp )
-        opencvideo.cpp)
-
+#        opencvideo.cpp)
+    openheader.cpp)
 add_executable(opencvideo_master ${SOURCE_FILES} )
 target_link_libraries( opencvideo_master
         ${OpenCV_LIBS}
